# zoo

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  build_and_test_all.sh  build_docker.sh  build_libraries.sh  build_service.sh  run_tests.sh
.github/workflows/: build-cpp.yml
devops/docker_base/: Dockerfile  build-and-push.sh
docs/arch_schema/: README.md  schema_uml.plant
libraries/: CMakeLists.txt  Dockerfile
libraries/common/: CMakeLists.txt
libraries/common/include/: binary.hpp  component_base.hpp  components_engine.hpp  config.hpp  format.hpp  json.hpp  logging.hpp  strong_typedef.hpp  thread_pool.hpp  transactions.hpp  utils.hpp
libraries/common/include/config/: logging_config.hpp
libraries/common/include/utils/: algo.hpp  errors.hpp  scope.hpp
libraries/common/src/binary/: binary.cpp
libraries/common/src/components/: components_base.cpp  components_engine.cpp
libraries/common/src/config/: config.cpp  logging_config.cpp
libraries/common/src/format/: format.cpp
libraries/common/src/logging/: logger.cpp  logger.hpp  logging.cpp  logging_impl.cpp  sink_base.hpp  sink_fs.cpp  sink_fs.hpp  sink_stdout.cpp  sink_stdout.hpp  sink_string.cpp  sink_string.hpp
libraries/common/src/threading/: thread_pool.cpp
libraries/common/src/transactions/: transactions.cpp
libraries/common/src/utils/: errors.cpp
libraries/common/tests/: binary.cpp  components.cpp  config.cpp  format.cpp  log.cpp  strong_typedef.cpp  transactions.cpp  utils.cpp
libraries/components/: CMakeLists.txt
libraries/components/include/: component_base.hpp  components_controller.hpp  components_engine.hpp
libraries/components/src/: components_base.cpp  components_controller.cpp  components_engine.cpp
libraries/components/tests/: components.cpp
libraries/files/: CMakeLists.txt
libraries/files/include/: transaction.hpp
libraries/files/src/transaction/: transaction.cpp
libraries/files/tests/: transaction.cpp
libraries/http/: CMakeLists.txt
libraries/http/include/: consts.hpp  default_handlers.hpp  exceptions.hpp  http_client.hpp  http_server.hpp  models.hpp  utils.hpp
libraries/http/src/default_handlers/: ping.cpp
libraries/http/src/http_client/: http_client.cpp
libraries/http/src/http_server/: http_server.cpp
libraries/http/src/tcp_session/: tcp_session.cpp  tcp_session.hpp
libraries/http/src/utils/: utils.cpp
libraries/http/tests/: server.cpp  utils.cpp
services/api_config/: CMakeLists.txt  Dockerfile  api.yaml  build_docker.sh  main.cpp  run_tests.sh
services/api_config/src/components/: api_storage.cpp  api_storage.hpp
services/api_config/src/handlers/: create.cpp  create.hpp  delete.cpp  delete.hpp  get.cpp  get.hpp  list.cpp  list.hpp  ping.cpp  ping.hpp  update.cpp  update.hpp
services/api_config/src/models/: api_config.cpp  api_config.hpp
services/api_config/src/utils/: request.cpp  request.hpp  response.cpp  response.hpp
services/api_config/tests/: conftest.py  test_api_config.py  test_service.py
services/document_db/: CMakeLists.txt  Dockerfile  api.yaml  main.cpp
services/document_db/configs/: log_config_default.json
services/document_db/docs/: storage.md  transactions.md
services/document_db/src/components/: storage.cpp  storage.hpp
services/document_db/src/fs_sink/: db_binary.cpp  db_binary.hpp  fs_sink.cpp  fs_sink.hpp  page.cpp  page.hpp
services/document_db/src/handlers/: clear.cpp  clear.hpp  create.cpp  create.hpp  delete.cpp  delete.hpp  get.cpp  get.hpp  list.cpp  list.hpp  update.cpp  update.hpp
services/document_db/src/models/: document.cpp  document.hpp  exceptions.hpp  namespace.hpp
services/document_db/src/utils/: request.cpp  request.hpp  response.cpp  response.hpp
services/document_db/tests/: conftest.py  test_db.py  test_file_system.py  test_service.py
services/dummy/: CMakeLists.txt  Dockerfile  main.cpp
services/dummy/src/components/: counter.cpp  counter.hpp  dict.cpp  dict.hpp
services/dummy/src/handlers/: count.cpp  count.hpp  dict.cpp  dict.hpp  get.cpp  get.hpp  ping.cpp  ping.hpp  post.cpp  post.hpp
services/dummy/tests/: conftest.py  test_dummy_components.py  test_dummy_http.py
services/dummy_http_server/: CMakeLists.txt  main.cpp
services/dummy_http_server/tests/: test_service.py
utils/test_utils/: fixtures.py  mocks.py  setup.py
utils/test_utils/zootest/: fixtures.py
